--- a/index.html
+++ b/index.html
@@ -19,11 +19,10 @@
                 <h1 class="title">Madusha Pallawela </h1>
                 <h3> Software Engineer - BBC</h3>
                 <h4> Projects</h4>
-
                 <div class="links">
                     <button class="snake"> Multiplayer Snake </button>
-                    <button>Particle Engine</button>
-                    <button>UI Components</button>
+                    <button class="particle">Particle Engine</button>
+                    <button class="canvas">Drawing App</button>
                 </div>
 
                 <div class="contact">
