Tweak ui and reduce particle gif size

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <img src="images/medium.png" />
                     </a>
                     <a href="https://www.linkedin.com/in/madusha-pallawela-196809bb/">
-                        <img src="images/linkedin.png" />
+                        <img style="height:50px" src="images/linkedin2.png" />
                     </a>
                     <a href="https://github.com/MadushaP">
                         <img src="images/github.png" />
