Add favicon and browser fix

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title> Madusha Pallawela </title>
+    <link rel="icon" type="image/png" href="images/Mlogo.png">
     <link rel="stylesheet" href="./style.css">
     <script src="./app.js"></script>
 </head>
@@ -24,13 +25,12 @@
                     <button class="particle">Particle Engine</button>
                     <button class="canvas">Drawing App</button>
                 </div>
-
                 <div class="contact">
                     <a href="https://medium.com/@madushapallawela">
                         <img src="images/medium.png" />
                     </a>
                     <a href="https://www.linkedin.com/in/madusha-pallawela-196809bb/">
-                        <img style="height:50px" src="images/linkedin2.png" />
+                        <img id="linkedIn" style="height:50px" src="images/linkedin2.png" />
                     </a>
                     <a href="https://github.com/MadushaP">
                         <img src="images/github.png" />
@@ -38,8 +38,6 @@
                 </div>
             </div>
         </div>
-
-
     </div>
 
 
