--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                 <h3> Software Engineer - BBC</h3>
                 <h4> Projects</h4>
                 <div class="links">
-                    <a href="snake.madusha.co.uk"><button class="snake"> Multiplayer Snake </button></a>
-                    <a href="particle.madusha.co.uk"><button class="particle">Particle Engine</button></a>
-                    <a href="canvas.madusha.co.uk"><button class="canvas">Drawing App</button></a>
+                    <a href="http://snake.madusha.co.uk"><button class="snake"> Multiplayer Snake </button></a>
+                    <a href="http://particle.madusha.co.uk"><button class="particle">Particle Engine</button></a>
+                    <a href="http://canvas.madusha.co.uk"><button class="canvas">Drawing App</button></a>
                 </div>
                 <div class="contact">
                     <a href="https://medium.com/@madushapallawela">
