Update mobile experience

--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
                 <h1 class="title">Madusha Pallawela </h1>
                 <h3> Software Engineer - BBC</h3>
                 <h4> Projects</h4>
+                <div id="mobile-warn"></div>
                 <div class="links">
-                    <a href="http://snake.madusha.co.uk"><button class="snake"> Multiplayer Snake </button></a>
-                    <a href="http://particle.madusha.co.uk"><button class="particle">Particle Engine</button></a>
-                    <a href="http://canvas.madusha.co.uk"><button class="canvas">Drawing App</button></a>
+                   <button  onclick="location.href = 'https://snake.madusha.co.uk';"  class="snake"> Multiplayer Snake </button>
+                    <button onclick="location.href = 'https://particle.madusha.co.uk';" class="particle">Particle Engine</button>
+                    <button onclick="location.href = 'https://canvas.madusha.co.uk';" class="canvas">Drawing App</button>
                 </div>
                 <div class="contact">
                     <a href="https://medium.com/@madushapallawela">
