--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <title> Madusha Pallawela </title>
     <link rel="icon" type="image/png" href="images/Mlogo.png">
     <link rel="stylesheet" href="./style.css">
