Update medium link

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <button onclick="location.href = 'https://canvas.madusha.co.uk';" class="canvas">Drawing App</button>
                 </div>
                 <div class="contact">
-                    <a href="https://medium.com/@madushapallawela">
+                    <a href="https://medium.com/@madushaP">
                         <img src="images/medium.png" />
                     </a>
                     <a href="https://www.linkedin.com/in/madusha-pallawela-196809bb/">
