Add instagram project

--- a/index.html
+++ b/index.html
@@ -22,27 +22,29 @@
                 <h3> Software Engineer - BBC</h3>
                 <h4> Projects</h4>
                 <div id="mobile-warn"></div>
-                <div class="links">
-                   <button  onclick="location.href = 'https://snake.madusha.co.uk';"  class="snake"> Multiplayer Snake </button>
-                    <button onclick="location.href = 'https://particle.madusha.co.uk';" class="particle">Particle Engine</button>
-                    <button onclick="location.href = 'https://canvas.madusha.co.uk';" class="canvas">Drawing App</button>
-                </div>
-                <div class="contact">
-                    <a href="https://medium.com/@madushaP">
-                        <img src="images/medium.png" />
-                    </a>
-                    <a href="https://www.linkedin.com/in/madusha-pallawela-196809bb/">
-                        <img id="linkedIn" style="height:50px" src="images/linkedin2.png" />
-                    </a>
-                    <a href="https://github.com/MadushaP">
-                        <img src="images/github.png" />
-                    </a>
-                </div>
+            </div>
+            <div class="links">
+                <button onclick="location.href = 'https://snake.madusha.co.uk'" class="snake"> Multiplayer Snake
+                </button>
+                <button onclick="location.href = 'https://particle.madusha.co.uk'" class="particle">Particle
+                    Engine</button>
+                <button onclick="location.href = 'https://canvas.madusha.co.uk'" class="canvas">Drawing App</button>
+                <button onclick="location.href = 'https://instagram.madusha.co.uk'" class="instagram">Instagram
+                    Clone</button>
+            </div>
+            <div class="contact">
+                <a href="https://medium.com/@madushaP">
+                    <img src="images/medium.png" />
+                </a>
+                <a href="https://www.linkedin.com/in/madusha-pallawela-196809bb/">
+                    <img id="linkedIn" style="height:50px" src="images/linkedin2.png" />
+                </a>
+                <a href="https://github.com/MadushaP">
+                    <img src="images/github.png" />
+                </a>
             </div>
         </div>
     </div>
-
-
 </body>
 
 </html>
